@@ -1,3 +1,6 @@
+NEXT RELEASE
+ - New types library.
+
 0.0.2 : 2013-03-18
  - Added o.construct.
  - o.extend now accepts a third argument to specify properties for the prototype.
